Super-mega-batch-update lol

--- a/client/main.html
+++ b/client/main.html
@@ -1,9 +1,26 @@
 <head>
-  <title>Glasslåven</title>
+  <title>GLASSLÅVEN</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Glasslåven kunstsenter ligger på Granavollen på Hadeland og åpnet våren 2016." />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Glasslåven"/>
+  <meta property="og:type" content="article"/>
+  <meta property="og:url" content="https://glasslaven.no"/>
+  <meta property="og:image" content="https://glasslaven.no/images/regular-negative-norwegian.png"/>
+  <meta property="og:site_name" content="Glasslåven"/>
+<!--   <meta property="fb:app_id" content="155625118500554"/> -->
+  <meta property="og:description" content="Glasslåven kunstsenter ligger på Granavollen på Hadeland og åpnet våren 2016."/>
+<!--   <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"> -->
+  <meta name="theme-color" content="#ffffff">
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-
+  <div id="render-target"></div>
 </body>
-
-
